--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<li class=""><a href="http://www.mojunyy.cn/"><font color="#FF0000">『欢迎光临本站mask』
+<li class=""><a href="http://www.mojunyy.cn/"><font color="#FF0000">『欢迎光临本站master』
 </div>
 </body>
 </html>
